syntax = "proto3";
package coop.rchain;

message Header {
    bytes  node_id   = 1;
    uint64 timestamp = 2;
}

message Node {
    bytes  id   = 1;
    bytes  host = 2;
    uint32 port = 3;
}

message Mutation {
    bytes  key   = 1;
    bytes  value = 2;
}

message Disconnect {
}

message Hello {
    Node node = 1;
}

// Are you still there?
message Ping {
    // Nothing special here, yet.
}

// Response to Ping
message Pong {
    // Nothing special here, yet.
}

message GetPeers {
}

message Peers {
    repeated Node nodes = 1;
}

message GetBlocks {
}

message Blocks {
    repeated Mutation mutations = 1;
}

message Protocol {
    Header header             =  1;

    oneof message {
        Hello      hello      =  2;
        Disconnect disconnect =  3;
        Ping       ping       =  4;
        Pong       pong       =  5;
        GetPeers   get_peers  =  6;
        Peers      peers      =  7;
        GetBlocks  get_blocks =  8;
        Blocks     blocks     =  9;
        Mutation   mutation   = 10;
    }
}
